# LocalLLM_RAG

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  PARAMETERS.md  README.md  README_DEPLOY.md  Readme-svelte.md  config.py  docker-compose.yml  docker-install.sh  exceptions.py  index.html  logger.py  main.py  nginx-prod.conf  nginx.conf  pyproject.toml  rag_service.py  setup.sh  start.sh
.claude/: settings.local.json
backend/: config.py  main.py  rag_service.py  start.sh  test_startup.py
frontend/: index.html
frontend-svelte/: Dockerfile  README_ja.md  package-lock.json  package.json
frontend-svelte/src/routes/: +layout.svelte  +page.svelte
frontend/css/: styles.css
frontend/js/: script.js
sample_data/: product_manual.txt  test_002_wifi_performance.txt  test_004_ir_transmission.txt  test_006_emc_test.txt  test_007_humidity_test.txt  test_009_app_compatibility.txt  test_011_usability_test.txt  test_014_packaging_test.txt  test_016_field_trial.txt  test_017_cost_analysis.txt
sample_data/company_a/: よくある質問_SR-1000.txt  会社情報_グローバルテック.txt  商品説明_スマートリモコンSR-1000.txt
sample_data/company_b/: よくある質問_HL-500.txt  会社情報_スマートライフ.txt  商品説明_スマートウォッチHL-500.txt
sample_data/sample/: company_info.txt  test_001_heat_resistance.txt  test_003_drop_test.txt  test_005_power_consumption.txt  test_008_security_test.txt  test_010_battery_life.txt  test_012_voice_assistant.txt  test_013_durability_test.txt  test_015_regulatory_compliance.txt  test_018_production_readiness.txt  test_019_market_research.txt  test_020_final_approval.txt
(+13 files in other folders)
